--- a/css/style.css
+++ b/css/style.css
@@ -1827,7 +1827,7 @@ label #bars
 .services-title
 {
 	font-size: 25px;
-	color: #345dcf;
+	color: #446ddf;
 	font-family: 'Roboto', sans-serif;
 }
 
